--- a/css/puma/images/desktop.ini
+++ b/css/puma/images/desktop.ini
@@ -1,2 +1,5 @@
 [LocalizedFileNames]
 Screenshot 2024-08-20 213342.png=@Screenshot 2024-08-20 213342.png,0
+Screenshot 2024-08-21 224149.png=@Screenshot 2024-08-21 224149.png,0
+Screenshot 2024-08-21 224206.png=@Screenshot 2024-08-21 224206.png,0
+Screenshot 2024-08-22 000816.png=@Screenshot 2024-08-22 000816.png,0
