--- a/css/puma/images/desktop.ini
+++ b/css/puma/images/desktop.ini
@@ -3,3 +3,8 @@ Screenshot 2024-08-20 213342.png=@Screenshot 2024-08-20 213342.png,0
 Screenshot 2024-08-21 224149.png=@Screenshot 2024-08-21 224149.png,0
 Screenshot 2024-08-21 224206.png=@Screenshot 2024-08-21 224206.png,0
 Screenshot 2024-08-22 000816.png=@Screenshot 2024-08-22 000816.png,0
+Screenshot 2024-08-22 132210.png=@Screenshot 2024-08-22 132210.png,0
+Screenshot 2024-08-22 132315.png=@Screenshot 2024-08-22 132315.png,0
+Screenshot 2024-08-22 132300.png=@Screenshot 2024-08-22 132300.png,0
+Screenshot 2024-08-22 132241.png=@Screenshot 2024-08-22 132241.png,0
+Screenshot 2024-08-22 132225.png=@Screenshot 2024-08-22 132225.png,0
