--- a/css/puma/images/desktop.ini
+++ b/css/puma/images/desktop.ini
@@ -10,3 +10,4 @@ Screenshot 2024-08-22 132241.png=@Screenshot 2024-08-22 132241.png,0
 Screenshot 2024-08-22 132225.png=@Screenshot 2024-08-22 132225.png,0
 Screenshot 2024-08-25 005450.png=@Screenshot 2024-08-25 005450.png,0
 Screenshot 2024-08-25 005512.png=@Screenshot 2024-08-25 005512.png,0
+Screenshot 2024-08-25 135756.png=@Screenshot 2024-08-25 135756.png,0
