--- a/css/puma/images/desktop.ini
+++ b/css/puma/images/desktop.ini
@@ -11,3 +11,5 @@ Screenshot 2024-08-22 132225.png=@Screenshot 2024-08-22 132225.png,0
 Screenshot 2024-08-25 005450.png=@Screenshot 2024-08-25 005450.png,0
 Screenshot 2024-08-25 005512.png=@Screenshot 2024-08-25 005512.png,0
 Screenshot 2024-08-25 135756.png=@Screenshot 2024-08-25 135756.png,0
+Screenshot 2024-08-25 235549.png=@Screenshot 2024-08-25 235549.png,0
+Screenshot 2024-08-25 235647.png=@Screenshot 2024-08-25 235647.png,0
