--- a/weekly_task/alen_solly/images/desktop.ini
+++ b/weekly_task/alen_solly/images/desktop.ini
@@ -1,3 +1,7 @@
 [LocalizedFileNames]
 Screenshot 2024-09-05 104452.png=@Screenshot 2024-09-05 104452.png,0
 Screenshot 2024-09-05 133729.png=@Screenshot 2024-09-05 133729.png,0
+Screenshot 2024-09-07 101328.png=@Screenshot 2024-09-07 101328.png,0
+Screenshot 2024-09-07 101845.png=@Screenshot 2024-09-07 101845.png,0
+Screenshot 2024-09-07 101825.png=@Screenshot 2024-09-07 101825.png,0
+Screenshot 2024-09-07 101341.png=@Screenshot 2024-09-07 101341.png,0
