--- a/weekly_task/alen_solly/images/desktop.ini
+++ b/weekly_task/alen_solly/images/desktop.ini
@@ -5,3 +5,4 @@ Screenshot 2024-09-07 101328.png=@Screenshot 2024-09-07 101328.png,0
 Screenshot 2024-09-07 101845.png=@Screenshot 2024-09-07 101845.png,0
 Screenshot 2024-09-07 101825.png=@Screenshot 2024-09-07 101825.png,0
 Screenshot 2024-09-07 101341.png=@Screenshot 2024-09-07 101341.png,0
+Screenshot 2024-09-07 124345.png=@Screenshot 2024-09-07 124345.png,0
