--- a/weekly_task/alen_solly/images/desktop.ini
+++ b/weekly_task/alen_solly/images/desktop.ini
@@ -7,3 +7,6 @@ Screenshot 2024-09-07 101825.png=@Screenshot 2024-09-07 101825.png,0
 Screenshot 2024-09-07 101341.png=@Screenshot 2024-09-07 101341.png,0
 Screenshot 2024-09-07 124345.png=@Screenshot 2024-09-07 124345.png,0
 Screenshot 2024-09-08 105035.png=@Screenshot 2024-09-08 105035.png,0
+Screenshot 2024-09-08 181143.png=@Screenshot 2024-09-08 181143.png,0
+Screenshot 2024-09-09 005747.png=@Screenshot 2024-09-09 005747.png,0
+Screenshot 2024-09-09 005816.png=@Screenshot 2024-09-09 005816.png,0
