--- a/weekly_task/sempakam/images/desktop.ini
+++ b/weekly_task/sempakam/images/desktop.ini
@@ -1,2 +1,6 @@
 [LocalizedFileNames]
 Screenshot 2024-09-30 000936.png=@Screenshot 2024-09-30 000936.png,0
+Screenshot 2024-09-30 234007.png=@Screenshot 2024-09-30 234007.png,0
+Screenshot 2024-09-30 234046.png=@Screenshot 2024-09-30 234046.png,0
+Screenshot 2024-09-30 234038.png=@Screenshot 2024-09-30 234038.png,0
+Screenshot 2024-09-30 234025.png=@Screenshot 2024-09-30 234025.png,0
