--- a/weekly_task/croma/images/desktop.ini
+++ b/weekly_task/croma/images/desktop.ini
@@ -6,3 +6,18 @@ Screenshot 2024-10-09 151841.png=@Screenshot 2024-10-09 151841.png,0
 Screenshot 2024-10-09 151830.png=@Screenshot 2024-10-09 151830.png,0
 Screenshot 2024-10-09 151819.png=@Screenshot 2024-10-09 151819.png,0
 Screenshot 2024-10-09 151755.png=@Screenshot 2024-10-09 151755.png,0
+Screenshot 2024-10-13 121910.png=@Screenshot 2024-10-13 121910.png,0
+Screenshot 2024-10-13 121850.png=@Screenshot 2024-10-13 121850.png,0
+Screenshot 2024-10-13 121832.png=@Screenshot 2024-10-13 121832.png,0
+Screenshot 2024-10-13 121815.png=@Screenshot 2024-10-13 121815.png,0
+Screenshot 2024-10-13 140815.png=@Screenshot 2024-10-13 140815.png,0
+Screenshot 2024-10-13 140847.png=@Screenshot 2024-10-13 140847.png,0
+Screenshot 2024-10-13 140837.png=@Screenshot 2024-10-13 140837.png,0
+Screenshot 2024-10-13 140827.png=@Screenshot 2024-10-13 140827.png,0
+Screenshot 2024-10-13 142923.png=@Screenshot 2024-10-13 142923.png,0
+Screenshot 2024-10-13 145942.png=@Screenshot 2024-10-13 145942.png,0
+Screenshot 2024-10-13 150159.png=@Screenshot 2024-10-13 150159.png,0
+Screenshot 2024-10-13 150054.png=@Screenshot 2024-10-13 150054.png,0
+Screenshot 2024-10-13 150003.png=@Screenshot 2024-10-13 150003.png,0
+Screenshot 2024-10-13 161021.png=@Screenshot 2024-10-13 161021.png,0
+Screenshot 2024-10-13 161036.png=@Screenshot 2024-10-13 161036.png,0
